tdf#114432: classify Tangut and Khitan Small Script as ScriptType::ASIAN

They are CJK scripts so should not get spacing applied between them and
other CJK scripts for instance.

Change-Id: Iab88ff1490733e514fd37436cff937dc5fc8dce2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153372
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>